--- a/Coding Project/frontend/stock-advisor-frontend/src/components/Signup/Signup.css
+++ b/Coding Project/frontend/stock-advisor-frontend/src/components/Signup/Signup.css
@@ -3,11 +3,13 @@ body, html {
     margin: 0;
   }
   
-  .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Full viewport height */
+  .signup_container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
   .login-box {
