--- a/Coding Project/frontend/stock-advisor-frontend/src/pages/Markets/Markets.css
+++ b/Coding Project/frontend/stock-advisor-frontend/src/pages/Markets/Markets.css
@@ -14,7 +14,7 @@
 .page-title {
   font-size: 3rem;
   font-weight: 700;
-  color: #1e3a8a;
+  color: black;
   margin-bottom: 20px;
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
   text-align: center;
