--- a/Coding Project/frontend/stock-advisor-frontend/src/components/Header/Header.css
+++ b/Coding Project/frontend/stock-advisor-frontend/src/components/Header/Header.css
@@ -40,7 +40,7 @@
   gap: 10px; 
 }
 
-.login-btn, .signup-btn {
+.login-btn, .signup-btn, .logout-btn {
   
   padding: 10px 20px;
   border: none;
@@ -89,4 +89,16 @@
   .auth-buttons {
     margin-top: 10px;
   }
+}
+.logout-btn {
+  background-color: #ffffff;
+  color: #2563eb;
+  border-radius: 5px;
+  
+}
+
+.logout-btn:hover {
+  background-color: #2563eb;
+  color: #ffffff;
+  border: 2px solid #ffffff;
 }
